# advent-of-code

./: .gitignore  LICENSE  README.md
2023/day-01/src/: main.rs
2023/day-02/rust/src/: game.rs  main.rs
2023/day-02/src/: main.rs
2023/day-03/src/: main.rs  temp.rs
2023/day-03/typescript/: README.md  bun.lockb  index.ts  output.txt  package.json  parser.test.ts  parser.ts  tim-out.txt
2023/day-04/rust/src/: main.rs
2023/day-05/rust/src/: main.rs
2023/day-06/rust/src/: main.rs
2023/day-07/rust/: Cargo.toml
2023/day-07/rust/src/: main.rs
2023/day-08/rust/src/: main.rs
2023/day-09/rust/src/: main.rs
2023/day-10/rust/src/: main.rs
2023/day-15/rust/src/: main.rs
2024/: README.md
2024/day-02/typescript/: main.test.ts  main.ts
2024/day-06/typescript/: main.test.ts  main.ts
2025/day-01/: CMakeLists.txt  Makefile
2025/day-01/src/: main.cpp  safe.cpp  safe.h
2025/day-01/tests/: test_safe.cpp
2025/day-02/: CMakeLists.txt  Makefile
2025/day-02/src/: main.cpp  product.cpp  product.h
2025/day-02/tests/: test_product.cpp
2025/day-03/: CMakeLists.txt  Makefile
2025/day-03/src/: bank.cpp  bank.h  main.cpp
2025/day-03/tests/: test_bank.cpp
